<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollViews"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_detail_kucing"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/dimens_medium">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimens_medium">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimens_medium">

                    <TextView
                        android:id="@+id/detail_name"
                        style="@style/TitleTextDetail"
                        tools:text="@string/dummy_string"
                        android:textSize="25sp"/>

                    <TextView
                        android:id="@+id/detail_origin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        tools:text="@string/dummy_string"
                        android:textStyle="italic"
                        android:textColor="@color/colorAccent"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimens_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimens_medium">

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="@dimen/dimens_weight"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/TitleTextDetail"
                            android:text="@string/view_rating" />

                        <TextView
                            android:id="@+id/detail_inteligen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/dummy_string"
                            android:textSize="30sp"
                            android:textColor="@color/colorAccent"/>

                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="@dimen/dimens_weight"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/TitleTextDetail"
                            android:text="@string/view_popularity" />

                        <TextView
                            android:id="@+id/detail_affection"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/dummy_string"
                            android:textSize="30sp"
                            android:textColor="@color/colorAccent"/>

                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="250dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimens_medium">

                    <TextView
                        style="@style/TitleTextDetail"
                        android:text="@string/view_overview"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/detail_des"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/dummy_string"
                        android:textColor="@color/colorTextPrimary"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</ScrollView>